Corrected the specifiers in my CSS for whitespace

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,6 @@ main > h1 {
   font-size: 3.5em;
 }
 
-td {
+script, b, p {
   white-space: pre-wrap;
 }
